--- a/dillo/templates/dillo/components/_button_follow.pug
+++ b/dillo/templates/dillo/components/_button_follow.pug
@@ -1,7 +1,7 @@
 | {% load activity_tags %}
 | {% if request.user.is_authenticated %}
 | {% if request.user != target_object %}
-a.btn.btn-sidebar(
+a.btn(
   class="js-follow-toggle {% if not request.user|is_following:target_object %}btn-primary-alt{% endif %} {{ class }}",
   data-follow_toggle_label="{% if request.user|is_following:target_object %}Follow{% else %}Unfollow{% endif %}",
   href="{% follow_url target_object %}",
@@ -11,7 +11,7 @@ a.btn.btn-sidebar(
     span {% if request.user|is_following:target_object %}Unfollow{% else %}Follow{% endif %}{% if tag %} Hashtag{% endif %}
 | {% endif %}
 | {% else %}
-a.btn.btn-primary-alt.btn-wide(
+a.btn.btn-primary-alt(
   class="{{ class }}",
   href="{% follow_url target_object %}")
   span
