--- a/dillo/templates/dillo/post_detail.pug
+++ b/dillo/templates/dillo/post_detail.pug
@@ -12,6 +12,7 @@ script.
 		$('main').html(data);
 		initEmbedListMedia();
 		initComments();
+		initAuthorCard();
 		$('.js-post-nav-prev').remove();
 		$('.js-post-nav-next').remove();
 	});
