Call initRelatedThumbnails at every post load

--- a/dillo/templates/dillo/post_detail.pug
+++ b/dillo/templates/dillo/post_detail.pug
@@ -13,6 +13,7 @@ script.
 		initEmbedListMedia();
 		initComments();
 		initAuthorCard();
+		initRelatedThumbnails();
 		$('.js-post-nav-prev').remove();
 		$('.js-post-nav-next').remove();
 	});
