--- a/dillo/templates/dillo/post_detail_embed_base.pug
+++ b/dillo/templates/dillo/post_detail_embed_base.pug
@@ -105,8 +105,13 @@ script.
 script.
   $(function () {
     initTooltips();
-    loadSinglePostGrid($('.post-related-container'));
   });
+
+  function initRelatedThumbnails() {
+    loadSinglePostGrid($('.post-related-container'));
+  };
+
+
 
 | {% block javascript_media %}
 | {% endblock javascript_media %}
