--- a/dillo/templates/dillo/components/_profile_header.pug
+++ b/dillo/templates/dillo/components/_profile_header.pug
@@ -66,7 +66,7 @@
       | {% include 'dillo/components/_button_edit.pug' with url=edit_url label="Edit Profile" class="btn-sidebar" %}
       | {% else %}
       //- Show Follow button for everyone else.
-      | {% include 'dillo/components/_button_follow.pug' with target_object=user class="btn-profile-follow" %}
+      | {% include 'dillo/components/_button_follow.pug' with target_object=user class="btn-profile-follow btn-wide" %}
       | {% endif %}
 
       | {% if request.user.is_superuser %}
