Share component: Only show "Share" label if specified

--- a/dillo/templates/dillo/components/_button_share.pug
+++ b/dillo/templates/dillo/components/_button_share.pug
@@ -21,7 +21,9 @@ button.btn(
 	data-target='#modal-share-{{ post.hash_id }}')
 	span
 		i.i-share
+		| {% if show_label %}
 		span {% trans 'Share' %}
+		| {% endif %}
 | {% endif %}
 
 .modal.fade(
