--- a/dillo/templates/dillo/components/_button_load_more.pug
+++ b/dillo/templates/dillo/components/_button_load_more.pug
@@ -1,6 +1,6 @@
 | {% load i18n %}
 
-button.btn.btn-link.btn-sidebar(
+button.btn.btn-link.btn-wide(
 	class="{{ js_class }}",
 	title="{% trans 'Load More' %}",
 	data-next_url="{{ url_next }}?page={{ page_obj.next_page_number }}")
