Posts Listing: Replace loader

--- a/dillo/templates/dillo/posts_base.pug
+++ b/dillo/templates/dillo/posts_base.pug
@@ -50,7 +50,7 @@
     class="post-stream-{% if layout == 'grid' %}grid{% else %}list{% endif %}",
     data-embed_url="{{ query_url }}")
     li.post-list-empty
-      .spinner-border
+      .bouncing-ball
 | {% endblock content %}
 
 | {% block sidebar %}
