--- a/dillo/templates/dillo/post_detail_embed_base.pug
+++ b/dillo/templates/dillo/post_detail_embed_base.pug
@@ -16,7 +16,7 @@ section.post-view-info.col-scrollable
   .btn-toolbar-row
     | {% url 'account_login' as btn_create_url %}
     | {% trans 'Log in to comment' as btn_label %}
-    | {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary" %}
+    | {% include 'dillo/components/_button_generic.pug' with url=btn_create_url label=btn_label class="btn-primary btn-wide" %}
   hr
   | {% endif %}
 
