--- a/dillo/templates/dillo/reels/_navigation_reel.pug
+++ b/dillo/templates/dillo/reels/_navigation_reel.pug
@@ -1,11 +1,14 @@
 | {% load i18n %}
 
 .nav-tabbar-items
-  a.btn(
-    href="{% url 'reel-list' %}",
-    class="{% ifequal '/reels/' request.get_full_path %}active{% endifequal %}")
-    span {% trans 'Top Reels' %}
-  a.btn(
-    href="{% url 'reel-list' %}?sort=recent",
-    class="{% if '/reels/?sort=recent' in request.get_full_path %}active{% endif %}")
-    span {% trans 'Most Recent' %}
+  .dropdown
+    #dropdown-sorting(data-toggle="dropdown") {{ url_params.sort_label }}
+    .dropdown-menu
+      a.dropdown-item(
+        href="{% url 'reel-list' %}?sort=top{{ url_params.tag_qs }}",
+        class="{% if url_params.sort == 'top' %}active{% endif %}"
+        ) Top Rated
+      a.dropdown-item(
+        href="{% url 'reel-list' %}?sort=recent{{ url_params.tag_qs }}",
+        class="{% if url_params.sort == 'recent' %}active{% endif %}"
+        ) Most Recent
